fix(KeyValue): fixed icon resize, top alignment

--- a/src/components/molecules/KeyValue/KeyValue.scss
+++ b/src/components/molecules/KeyValue/KeyValue.scss
@@ -1,11 +1,9 @@
 .keyValue {
     $this: &;
 
-    display: flex;
-
-    &_horizontal {
-        align-items: center;
-    }
+    display: inline-flex;
+    align-items: flex-start;
+    max-width: 100%;
 
     &_vertical {
         flex-direction: column;
@@ -13,12 +11,18 @@
 
     &__content {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         color: var(--guit-sem-color-foreground-neutral-2);
+        flex: 1;
+    }
+
+    &__icon {
+        flex: 0 0 auto;
     }
 
     &__value {
         color: var(--guit-sem-color-foreground-neutral-1);
+        word-break: break-word;
     }
 
     &_large {
